Fixing quote spacing

--- a/assets/styles/slider.css
+++ b/assets/styles/slider.css
@@ -125,7 +125,7 @@
     padding: 0.7rem 0.5rem !important;
   }
   #testimonials .quotes:before {
-    top: -10px;
+    top: -15px;
   }
 }
 #testimonials .card .title {
